# scala-native

./: .clang-format  .scalafmt.conf  .travis.yml  Main.scala  Stats.scala  build.sbt  mangling  profile.data  profile.data.freq
benchmarks/src/main/scala/benchmarks/: Benchmark.scala  Formats.scala  Main.scala  Opts.scala
benchmarks/src/main/scala/cd/: CDBenchmark.scala
benchmarks/src/main/scala/deltablue/: DeltaBlueBenchmark.scala
demo/jvm/: smallpt.scala
demo/native/: smallpt.scala
docs/: index.rst
docs/changelog/: 0.1.rst  0.2.rst  index.rst
docs/contrib/: mangling.rst
docs/lib/: javalib.rst
nativelib/src/main/resources/: CountingMap.cpp  CountingMap.hpp  cycleclock.cpp  exit.c  freqprofile.cpp  inlinecaching.cpp  internal_macros.h  profile.cpp  profiling.c  safepoint.c  safepoint.h  typeprofile.cpp
nativelib/src/main/resources/gc/cms/: Allocator.c  Allocator.h  Block.c  Block.h  CMS.c  CMS.h  CMakeLists.txt  GC.c  GCTypes.h  Heap.c  Heap.h  LargeAllocator.c  LargeAllocator.h  Log.h  Marker.c  Marker.h  Object.c  Object.h  Time.h  Types.h
nativelib/src/main/resources/gc/cms/datastructures/: Bitmap.h  Buffer.h  FreeList.h  Stack.h
nativelib/src/main/resources/gc/cms/headers/: BlockHeader.h  ObjectHeader.h
nativelib/src/main/resources/gc/cms/utils/: MathUtils.h
nativelib/src/main/resources/gc/immix/: CMakeLists.txt  ImmixGC.c
nativelib/src/main/resources/gc/markandsweep/: Allocator.c  Allocator.h  Block.c  Block.h  CMakeLists.txt  Constants.h  GCTypes.h  Heap.c  Heap.h  LargeAllocator.c  LargeAllocator.h  Log.h  MarkAndSweepGC.c  Marker.c  Marker.h  Object.c  Object.h  ProgramRoots.h  alloc.c  alloc.h  bitmap.c  bitmap.h  block.c  block.h  chunk_allocator.c  chunk_allocator.h  free_list.c  free_list.h  gc.c  gc.h  heap.c  heap.h  linked_list.c  linked_list.h  log.h  mark.c  mark.h  stack.c  stack.h  state.c  (+6 more)
nativelib/src/main/resources/gc/markandsweep/datastructures/: Bitmap.c  Bitmap.h  FreeList.c  FreeList.h  Stack.c  Stack.h
nativelib/src/main/resources/gc/markandsweep/headers/: BlockHeader.h  ObjectHeader.h
nativelib/src/main/resources/gc/markandsweep/utils/: MathUtils.c  MathUtils.h  bitmap_utils.c  bitmap_utils.h  free_list_utils.c  free_list_utils.h  heap_printer.c  heap_printer.h  heap_sanity.c  heap_sanity.h  linked_list_utils.c  linked_list_utils.h  stack_utils.c  stack_utils.h
project/: build.sbt
report/src/main/scala/: Report.scala
sandbox/: Test.scala
scalalib/overrides-2.11/scala/: Enumeration.scala
scalalib/overrides-2.11/scala/runtime/: ScalaRunTime.scala
scalalib/overrides-2.11/scala/util/: Properties.scala
scripted-tests/run/external-dependencies/: build.sbt
scripted-tests/run/java-io-file-2/: Files.scala
scripted-tests/run/java-io-file-output-stream/: build.sbt
scripted-tests/run/java-net-socket/: build.sbt
(+501 files in other folders)
